--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,9 +15,11 @@
     "@react-router/node": "^7.10.1",
     "@react-router/serve": "^7.10.1",
     "@tanstack/react-form": "^1.27.3",
+    "@urql/exchange-graphcache": "^9.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "catalog:",
+    "graphql": "^16.12.0",
     "isbot": "^5.1.28",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
@@ -28,6 +30,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.2",
+    "urql": "^5.0.1",
     "zod": "catalog:"
   },
   "devDependencies": {
