--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,12 +18,14 @@
     "@urql/exchange-graphcache": "^9.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "catalog:",
     "graphql": "^16.12.0",
     "isbot": "^5.1.28",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
     "react-router": "^7.10.1",
     "shadcn": "^3.6.2",
