--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@dnd-kit/react": "^0.2.4",
     "@ra-healthcare/env": "workspace:*",
     "@react-router/fs-routes": "^7.10.1",
     "@react-router/node": "^7.10.1",
