chore(biome): exclude build dir

--- a/biome.json
+++ b/biome.json
@@ -11,6 +11,7 @@
       "**",
       "!**/.next",
       "!**/dist",
+      "!**/build",
       "!**/.turbo",
       "!**/dev-dist",
       "!**/.zed",
